fix mobile viewport whitespace

--- a/css/colours.scss
+++ b/css/colours.scss
@@ -22,6 +22,13 @@ span, article, footer, time, small {
     display: none;
 }
 
+// adding this, fixed the whitespace for mobile view
+html,body
+{
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   overflow: hidden;
